--- a/index.html
+++ b/index.html
@@ -638,23 +638,23 @@
               <!-- Project 1 -->
               <div class="project">
                 <div class="project-image project-clickable" data-project="project1">
-                  <img src="assets/placeholder.svg" alt="Project 1">
+                  <img src="https://raw.githubusercontent.com/DrFreezyYT/drfreezyyt.github.io/main/A3326941-7740-44B4-B16E-24B3CE2BCEA2.webp" alt="minecraft_enchant_order_ico">
                 </div>
                 <div class="project-details">
                   <div class="project-header">
-                    <h3 class="project-title project-clickable" data-project="project1">Project 1</h3>
+                    <h3 class="project-title project-clickable" data-project="project1">Minecraft Enchant Order</h3>
                     <span class="status online"></span>
                     <span class="status-text">Online</span>
                   </div>
-                  <p class="project-description">A comprehensive Minecraft plugin that enhances gameplay with new features and mechanics.</p>
+                  <p class="project-description">A calculator for making the most efficient enchants in Minecraft!</p>
                   <div class="project-links">
-                    <a href="https://example.com/download1" target="_blank" class="button">Download</a>
-                    <a href="https://github.com/example1" target="_blank" class="button">GitHub</a>
+                    <a href="https://enchant.freezy.me/" target="_blank" class="button">Page</a>
+                    <a href="https://github.com/DrFreezyYT/enchant-order.github.io" target="_blank" class="button">GitHub</a>
                   </div>
                 </div>
               </div>
 
-              <!-- Project 2 -->
+              <!-- Project 2 
               <div class="project">
                 <div class="project-image project-clickable" data-project="project2">
                   <img src="assets/placeholder.svg" alt="Project 2">
@@ -672,6 +672,7 @@
                   </div>
                 </div>
               </div>
+              -->
               
               <!-- Add More Projects Here -->
               <!-- Example:
@@ -790,19 +791,20 @@
     <div id="popup-project1" class="modal">
       <div class="modal-content">
         <span class="close-button" aria-label="Close Modal">&times;</span>
-        <img src="assets/placeholder.svg" alt="Project 1 Image">
+        <img src="https://raw.githubusercontent.com/DrFreezyYT/drfreezyyt.github.io/main/A3326941-7740-44B4-B16E-24B3CE2BCEA2.webp" alt="minecraft_enchant_order_ico">
         <div class="modal-details">
-          <h2>Project 1</h2>
-          <p>A comprehensive Minecraft plugin that enhances gameplay with new features and mechanics, providing players with an enriched gaming experience.</p>
+          <h2>Minecraft Enchant Order</h2>
+          <p>A calculator for making the most efficient enchants in Minecraft!</p>
           <div class="project-popup-links">
-            <a href="https://example.com/download1" target="_blank" class="button">Download</a>
-            <a href="https://github.com/example1" target="_blank" class="button">GitHub</a>
+            <a href="https://enchant.freezy.me/" target="_blank" class="button">Page</a>
+            <a href="https://github.com/DrFreezyYT/enchant-order.github.io" target="_blank" class="button">GitHub</a>
           </div>
         </div>
       </div>
     </div>
 
     <!-- Project 2 Modal -->
+    <!-- Example:
     <div id="popup-project2" class="modal">
       <div class="modal-content">
         <span class="close-button" aria-label="Close Modal">&times;</span>
@@ -817,6 +819,7 @@
         </div>
       </div>
     </div>
+    -->
 
     <!-- Add More Project Modals Here -->
     <!-- Example:
