--- a/index.html
+++ b/index.html
@@ -203,6 +203,15 @@
                         page: "https://drfreezyyt.github.io/dattv.github.io/nwtam.html",
                         github: "https://github.com/DrFreezyYT/dattv.github.io",
                         status: "on" 
+                    },
+                    {
+                        id: 6,
+                        title: "Server Reconnect",
+                        description: "A Simple Velocity Plugin wich automatically reconnects you to a server after it's restarting! ",
+                        image: "https://placehold.co/600x200.png",
+                        page: null,
+                        github: "https://github.com/Freezy-Studios/ServerReconnect",
+                        status: "on" 
                     }
                     // Add more projects as needed
                 ]
